--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,14 @@
 
     <ul class="list">
         <li>
-            <a href="/unsubscribed.html">Unsubscribed</a>
+            <a href="./unsubscribed.html">Unsubscribed</a>
         </li>
         <li>
-            <a href="/subscription-reactivated.html">Subscription Reactivated</a>
+            <a href="./subscription-reactivated.html">Subscription Reactivated</a>
         </li>
-        <li><a href="/report-spam.html">Report Spam</a>
+        <li><a href="./report-spam.html">Report Spam</a>
         </li>
-        <li> <a href="/report-sent.html">Report Sent</a></li>
+        <li> <a href="./report-sent.html">Report Sent</a></li>
     </ul>
 
     <!-- build:js -->
