--- a/src/report-spam.html
+++ b/src/report-spam.html
@@ -39,7 +39,7 @@
 
             </div>
             <div class="logo mt-60 center">
-                <img src="/img/logo.svg" alt="">
+                <img src="./img/logo.svg" alt="">
             </div>
         </div>
 
