--- a/src/unsubscribed.html
+++ b/src/unsubscribed.html
@@ -38,7 +38,7 @@
 
             </div>
             <div class="logo mt-30 center">
-                <img src="/img/logo.svg" alt="">
+                <img src="./img/logo.svg" alt="">
             </div>
         </div>
 
