removed link on email

--- a/src/report-sent.html
+++ b/src/report-sent.html
@@ -25,7 +25,7 @@
                     Report Sent
                 </h2>
                 <p class="font-16">
-                    Your email address <a href="mailto:barisergin@gmail.com">barisergin@gmail.com</a> has been successfully removed from all mailing lists. Your complaint has also been recorded.
+                    Your email address barisergin@gmail.com has been successfully removed from all mailing lists. Your complaint has also been recorded.
                 </p>
             </div>
 
