--- a/src/subscription-reactivated.html
+++ b/src/subscription-reactivated.html
@@ -25,7 +25,7 @@
                     Subscription Rectivated
                 </h2>
                 <p class="font-16">
-                    You’ve been subscribed to this list as <a href="mailto:barisergin@gmail.com">barisergin@gmail.com</a>
+                    You’ve been subscribed to this list as barisergin@gmail.com
                 </p>
             </div>
 
