--- a/src/unsubscribed.html
+++ b/src/unsubscribed.html
@@ -25,7 +25,7 @@
                     Unsubscribe Successful
                 </h2>
                 <p class="font-16">
-                    You’ll never get an email from this list to <a href="mailto:barisergin@gmail.com">barisergin@gmail.com</a>
+                    You’ll never get an email from this list to barisergin@gmail.com
                 </p>
             </div>
             <div class="wrapper-item__bottom p-40">
